Product page, set products to busker. Busket page, representig list of products

--- a/src/pages/Basket.css
+++ b/src/pages/Basket.css
@@ -1,16 +1,19 @@
 .basket {
-  border: solid black;
+  border: solid 1px black;
+  padding: 5px;
 }
 .basket-list {
-  border: solid black;
+  border: solid 1px black;
   padding: 10px;
 }
 .basket-item {
-  border: solid black;
+  border: solid 1px black;
   padding: 10px;
   margin: 10px 0px;
 }
 .basket-item img {
-  border: solid black;
   width: 200px;
+}
+button {
+  float: right;
 }
